--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,8 @@
         <a class="nav-item nav-link" href="#front-pg-bg">HOME <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#about">ABOUT</a>
         <a class="nav-item nav-link" href="#skills">SKILLS</a>
-        <a class="nav-item nav-link" href="#experience">EXPERIENCE</a>
-        <a class="nav-item nav-link" href="#portfolio">PORTFOLIO</a>
+        <a class="nav-item nav-link" href="#credentials">CREDENTIALS</a>
+        <a class="nav-item nav-link" href="#projects">PROJECTS</a>
         <a class="nav-item nav-link" href="#contact">CONTACT</a>
       </div>
     </div>
@@ -56,11 +56,11 @@
     </div>
   </div>
   <!--./ terminal-->
-  <!-- soundcloud for blank banshee 68675282  182972240-->
+  <!-- soundcloud for blank banshee 68675282  182972240  256782324-->
 
   <!--soundcloud player-->
   <div id="soundcloud">
-    <iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/68675282&amp;color=%23000000&amp;inverse=true&amp;auto_play=true&amp;show_user=true"></iframe>
+    <iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/15720448&amp;color=%23000000&amp;inverse=true&amp;auto_play=true&amp;show_user=true"></iframe>
   </div>
   <!--./soundcloud player-->
 
@@ -91,12 +91,12 @@
     <section>
       <div class="row">
         <article class="col-md-12 text-center" >
-          <p id="my-bio">To describe the nature of this artificial man, I will consider<br>
-            First, the matter thereof, and the artificer; both which is man.<br>
-            Secondly, how, and by what covenants it is made; what are the rights<br>
-            Thirdly, what is a Christian Commonwealth.<br>
-            Lastly, what is the Kingdom of Darkness.<br>
-            <i>Hobbs, 1651</i>
+          <p id="my-bio">I'm Cam Milligan, a Toronto based accoutant, python developer, and tech enthusiast.<br>
+            By day, I'm a Chatered Professional Accountant workng in the finance industry.<br>
+            My skillset is in forecast modeling, risk analytics, process control, and building IFRS or ASPE financial statements.<br>
+            By night, I'm a developer and am focused on several open source projects detailed below.<br>
+            I want to position myself as a bridge between finance and tech realms.<br>
+            I'm also an avid reader of science fiction and fantasy.<br>
           </p>
         </article>
       </div>
@@ -120,40 +120,40 @@
         <article class="col-md-3">
           <img class="mx-auto skills-sec" src="static/images2/python.png">
           <h3 class="text-center">Python</h3>
-          <p>Thicc </p>
+          <p>I am a proficient developer of Python3. This website was developed using Flask and a lot of Javascript. I'm familiar with many other packages including but not limited to Pandas, NumPy, Requests, Boto3 </p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images2/ETH-alt.svg">
-          <h3 class="text-center">Ethereum</h3>
-          <p>Boi</p>
+          <img class="mx-auto skills-sec" src="static/images2/bootstrap.png">
+          <h3 class="text-center">Bootstrap</h3>
+          <p>I know the general inner workings of bootstrap and the majority of this webpage is bootstrap driven.</p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images2/ADA-alt.svg">
-          <h3 class="text-center">Cardano</h3>
-          <p>Club</p>
+          <img class="mx-auto skills-sec" src="static/images2/jquery.png">
+          <h3 class="text-center">jQuery</h3>
+          <p>I'm a novice in jQuery but I've identified it as an important area to improve.</p>
         </article>
 
         <article class="col-md-3">
-          <img class="mx-auto skills-sec" src="static/images2/XMR.svg">
-          <h3 class="text-center">Monero</h3>
-          <p>!!!!!</p>
+          <img class="mx-auto skills-sec" src="static/images2/excel.png">
+          <h3 class="text-center">Excel</h3>
+          <p>I've used excel in a professional environment for several years. Some past projects included forecast modeling, risk analytics, statistical analysis, and financial statements</p>
         </article>
       </div>
     </section>
   </div>
   <!--./skills-->
 
-  <!--experience parallax-->
-  <div class="exp-bg" id="experience">
+  <!--credentials parallax-->
+  <div class="exp-bg" id="credentials">
     <div class="heading">
       <span class="center">CREDENTIALS</span>
     </div>
   </div>
-  <!--./experience parallax-->
+  <!--./credentials parallax-->
 
-  <!--experience-->
+  <!--credentials-->
   <div class="container" >
     <section>
       <div class="row" style="padding-top: 40px;">
@@ -172,17 +172,17 @@
       </div>
     </section>
   </div>
-  <!--./experience-->
+  <!--./credentials-->
 
-  <!--portfolio parallax-->
-  <div class="portfolio-bg" id="portfolio">
+  <!--projects parallax-->
+  <div class="portfolio-bg" id="projects">
     <div class="heading">
       <span class="center">PROJETS</span>
     </div>
   </div>
-  <!--./portfolio parallax-->
+  <!--./projects parallax-->
 
-  <!--portfolio-->
+  <!--projects-->
   <div class="container">
     <section id="skills">
       <div class="row">
@@ -190,47 +190,47 @@
         <!--first row-->
         <article class="col-md-4 text-justify">
             <img class="mx-auto portfolio-sec" src="static/images2/zen.png"><br>
-            <h3 class="text-center">Zen Tools</h3>
-            <p>The goal of this project is to provide an open and accessable collection of tools for use with the ZenCash ecosystem.</p>
+            <h3 class="text-center"><a href="https://zencashtools.herokuapp.com/">Zencash Tools</a></h3>
+            <p>Zencash Tools is a non-profit community project I started in late 2017 with the goal developing a collection of user fiendly web apps to be used within the Zencash cryptocurrency ecosystem. Zencash is a privacy focused currency with amazing potential. One of the more polished tools provides users with a csv file containing an address's transaction history with historical prices to help Zencash miners track earnings.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec" src="static/images2/lightning.png"><br>
-            <h3 class="text-center">Lightning Network</h3>
-            <p>One of the most cutting edge technologies in the blockchain space is the lightning network. I want to explore operating a node, implementing platforms ontop of nodes, and investigating the possibility of integrating atomic swaps with litecoin and zencash. The goal is to integrate with a Lightning Network Daemon API.</p>
+            <img class="mx-auto portfolio-sec" src="static/images2/favicon.png"><br>
+            <h3 class="text-center">Century Project</h3>
+            <p>Century is the project name for this website. My plan is to always be updating, actively improving, and testing new features out here. Future plans include a blog section and an image gallery.</p>
         </article>
 
         <article class="col-md-4 text-justify">
             <img class="mx-auto portfolio-sec" src="static/images2/raiden.png"><br>
-            <h3 class="text-center">Raiden Network</h3>
-            <p>This is a scaling solution for Ethereum similar to the Lightning Network. I want to investigate operating a node, deploying micro raiden pay wall, and creating open source one click deploy solutions.</p>
+            <h3 class="text-center">Project 3</h3>
+            <p>To be determined.</p>
         </article>
         <!--./first row-->
 
         <!--second row-->
         <article class="col-md-4">
             <img class="mx-auto portfolio-sec" src="static/images2/solidity.svg"><br>
-            <h3 class="text-center">Solidity</h3>
-            <p>Solidity is the programming language of Ethereum. I want to explore the possibilities and integrate wherever possible. It could potentially serve as the backbone to other projects, creating cross chain platforms.</p>
+            <h3 class="text-center">Project 4</h3>
+            <p>To be determined.</p>
         </article>
 
         <article class="col-md-4 text-justify">
             <img class="mx-auto portfolio-sec" src="static/images2/rick.png"><br>
-            <h3 class="text-center">Merchandise</h3>
-            <p>I want to explore starting a side business of merchandise and apperal related to blockchain, vaporwave, and cyberpunk.</p>
+            <h3 class="text-center">Project 5</h3>
+            <p>To be determined.</p>
         </article>
 
         <article class="col-md-4 text-justify">
-            <img class="mx-auto portfolio-sec " src="static/images2/raspbian.jpg"><br>
-            <h3 class="text-center">Raspberry Pi</h3>
-            <p>I've used my Pi in a number of projects now. It has been an Ethereum Node, a Kodi media centre, a Retro-Pi and several other small weekend projects.</p>
+            <img class="mx-auto portfolio-sec " src="static/images2/raspbian.png"><br>
+            <h3 class="text-center">Project 6</h3>
+            <p>To be determined.</p>
         </article>
         <!--./second row-->
 
       </div>
     </section>
   </div>
-  <!-- ./ portfolio -->
+  <!-- ./ projects -->
 
   <!-- contact parallax -->
   <div class="contact-bg" id="contact">
@@ -263,8 +263,8 @@
                 <div class='form-group'>
                   <label for='subject'>Subject</label>
                   <select name='subject' class='form-control'>
-                    <option>Blockchain</option>
                     <option>Open Source Contribution</option>
+                    <option>Blockchain</option>
                     <option>Other Inquiry</option>
                   </select>
                 </div>
@@ -295,7 +295,7 @@
           <i class="cc ETH-alt" onclick="alert('0x07aBaAfFe732eFCA99d22495F64a1c185C9BD090');" title="ETH"></i>
           <i class="cc LTC-alt" onclick="alert('LhWHWaKeQuTEt6Lu19WvKh8aA7bB5jjqQF');" title="LTC"></i>
           <i class="cc DASH-alt" onclick="alert('Xxu2hnaNvgZqBLa41jQjoRh8Q6vPX82rbk');" title="DASH"></i><br>
-          <span><a href="https://github.com/personaontherun">GitHub</a><br>
+          <a style="color:white;" href="https://github.com/personaontherun">GitHub</a><br>
 
         </footer>
       </div>
@@ -304,7 +304,7 @@
   <!--./footer-->
 </div>
 
-<style>
+<!-- <style>
    body {
       background: #fafafa;
       font-family: "Montserrat", "Lato", "Helvetica", "Arial", sans-serif;
@@ -318,7 +318,7 @@
    }
    i.cc { font-size: 4rem; display: inline-block; margin: 0 1.3rem 1.3rem 0; transition: 0.1s ease all; }
    i.cc:hover { color: #0060BD; transform: rotate(-20deg); transform-origin: 0.49em 0.7em; }
-</style>
+</style> -->
 
 
 <!-- ./ content -->
@@ -329,13 +329,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <!--bootstrap-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
+<!--particles-->
 <script src="static/js/particles.js"></script>
+<!--main-->
 <script src="static/js/main.js"></script>
-
+<!--typed-->
 <script src="static/js/typed.min.js"></script>
+<!--terminal-->
 <script src="static/js/terminal.js"></script>
-<!--<script src="static/js/three.min.js"></script>-->
-<!--<script src="static/js/Detector.js"></script>-->
-<!--<script src="static/js/logo.js"></script>-->
+
 </body>
