--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@
         <article class="col-md-3">
           <img class="mx-auto skills-sec" src="static/images2/python.png">
           <h3 class="text-center">Python</h3>
-          <p>I am a proficient developer of Python3. This website was developed using Flask and a lot of Javascript. I'm familiar with many other packages including but not limited to Pandas, NumPy, Requests, Boto3 </p>
+          <p>I am a proficient developer of Python3. This website was developed using Flask and a lot of Javascript. I'm familiar with many other packages including but not limited to Pandas, NumPy, Requests.</p>
         </article>
 
         <article class="col-md-3">
@@ -163,11 +163,11 @@
         </div>
         <div class="col-md-12">
           <img class="msc" src="static/images2/cpa.png" style="float:right;" class="pull-right">
-          <p class="pull-right msc-text" style="text-align: right;">Received my CPA designation in April 2017.</p>
+          <p class="pull-right msc-text" style="text-align: right;">CPA designation in April 2017.</p>
         </div>
         <div class="col-md-12">
           <img class="msc" src="static/images2/mcmaster.png" style="float:left" class="pull-left">
-          <p class="pull-left msc-text" style="text-align: left;">Completed an Honors Bachelor of Commerce in April 2014.</p>
+          <p class="pull-left msc-text" style="text-align: left;">Honors Bachelor of Commerce in April 2014.</p>
         </div>
       </div>
     </section>
